--- a/config.json
+++ b/config.json
@@ -1,23 +1,16 @@
 {
-  "theme": "hijau",
+  "website_theme": "green",
   
-  "colors": {
-    "primary": "#2E7D32",
-    "secondary": "#4CAF50", 
-    "background": "#1B5E20",
-    "text": "#FFFFFF",
-    "button": "#388E3C",
-    "cell": "#81C784"
+  "color_scheme": {
+    "main_color": "#27ae60",
+    "secondary_color": "#2ecc71",
+    "background_color": "#1e8449",
+    "text_color": "#ffffff"
   },
   
-  "settings": {
+  "game_config": {
     "sound": true,
-    "board_sizes": [3, 4],
-    "bot_levels": ["mudah", "normal", "sulit"]
-  },
-  
-  "game_info": {
-    "name": "XO Game",
-    "version": "2.0"
+    "default_board": 3,
+    "difficulty": ["easy", "medium", "hard"]
   }
 }
