--- a/config.json
+++ b/config.json
@@ -1,51 +1,62 @@
-
 {
   "game_name": "XO Game",
-  "version": "3.0",
+  "version": "3.5",
   
   "theme": {
-    "background": "#B71C1C",
-    "primary": "#D32F2F",
-    "secondary": "#F44336",
-    "text": "#FFFFFF",
-    "cell_bg": "rgba(255, 255, 255, 0.1)",
-    "cell_border": "rgba(255, 255, 255, 0.2)",
-    "button_bg": "#D32F2F",
-    "button_hover": "#C62828",
-    "x_color": "#FF9800",
-    "o_color": "#2196F3",
-    "win_color": "#FFD700"
+    "mode": "dark",  // "dark" atau "light"
+    
+    "dark_mode": {
+      "background": "#1A1A2E",
+      "primary": "#16213E",
+      "secondary": "#0F3460",
+      "text": "#E6E6E6",
+      "cell_bg": "rgba(255, 255, 255, 0.05)",
+      "cell_border": "rgba(255, 255, 255, 0.1)",
+      "button_bg": "#0F3460",
+      "button_hover": "#16213E",
+      "x_color": "#4FC3F7",
+      "o_color": "#FF8A65"
+    },
+    
+    "light_mode": {
+      "background": "#F5F7FA",
+      "primary": "#E4E7EB",
+      "secondary": "#CBD2D9",
+      "text": "#1F2933",
+      "cell_bg": "rgba(255, 255, 255, 0.8)",
+      "cell_border": "#CBD2D9",
+      "button_bg": "#3B82F6",
+      "button_hover": "#2563EB",
+      "x_color": "#3B82F6",
+      "o_color": "#EF4444"
+    }
   },
   
   "settings": {
     "board_sizes": [3, 4],
     "bot_levels": ["mudah", "normal", "sulit"],
     "sound": true,
-    "default_board": 3,
-    "default_difficulty": "normal"
+    "auto_dark_mode": true,  // auto switch based on time
+    "dark_mode_hours": "18:00-06:00"  // otomatis gelap jam 6pm-6am
   },
   
   "features": {
+    "dark_mode": true,
+    "auto_theme": true,
+    "theme_switch": true,
     "sound_effects": true,
-    "animations": true,
-    "score_tracker": true,
-    "multiplayer": false,
-    "leaderboard": false
+    "animations": true
   },
   
   "update": {
     "enabled": true,
-    "title": "Tema Baru!",
-    "message": "Sekarang dengan tema merah yang lebih segar!"
+    "title": "🎨 Fitur Baru!",
+    "message": "Mode Gelap/Terang sudah tersedia!"
   },
   
-  "maintenance": {
-    "enabled": false,
-    "message": "Game sedang dalam perawatan."
-  },
-  
+  "maintenance": false,
   "bug_report": {
     "enabled": true,
-    "email": "bug@xogame.com"
+    "email": "risksadit@gmail.com"
   }
 }
