--- a/config.json
+++ b/config.json
@@ -1,23 +1,24 @@
 {
-  "theme": "dark",
-  
-  "colors_dark": {
-    "background": "#121212",
-    "primary": "#1E1E1E",
-    "secondary": "#2D2D2D",
-    "text": "#FFFFFF",
-    "button": "#BB86FC",
-    "cell": "#2D2D2D"
+  "theme_settings": {
+    "mode": "dark",
+    "primary_color": "#1E1E1E",
+    "secondary_color": "#2D2D2D",
+    "background_color": "#121212",
+    "text_color": "#FFFFFF",
+    "button_color": "#BB86FC",
+    "cell_color": "#2D2D2D",
+    "x_color": "#FF5722",
+    "o_color": "#2196F3"
   },
   
-  "colors_light": {
-    "background": "#FFFFFF",
-    "primary": "#F5F5F5",
-    "secondary": "#E0E0E0",
-    "text": "#000000",
-    "button": "#6200EE",
-    "cell": "#F5F5F5"
+  "game_settings": {
+    "board_sizes": [3, 4],
+    "difficulty": ["mudah", "normal", "sulit"],
+    "sound": true
   },
   
-  "dark_mode_enabled": true
+  "features": {
+    "dark_mode": true,
+    "sound_effects": true
+  }
 }
