--- a/config.json
+++ b/config.json
@@ -1,51 +1,43 @@
 {
-  "game_name": "XO Game Ultimate",
-  "version": "4.0",
+  "game_name": "XO Game Coklat",
+  "version": "4.1",
   
   "theme_settings": {
-    "background": "#121212",
-    "primary": "#1E1E1E",
-    "secondary": "#2D2D2D",
+    "background": "#5D4037",
+    "primary": "#795548",
+    "secondary": "#8D6E63",
     "text": "#FFFFFF",
-    "accent": "#4CAF50",
-    "x_color": "#FF5722",
-    "o_color": "#2196F3"
+    "accent": "#D7CCC8",
+    "x_color": "#FFAB91",
+    "o_color": "#B0BEC5",
+    "button_bg": "#A1887F",
+    "button_hover": "#8D6E63"
   },
   
   "settings": {
-    "board_sizes": [3, 4, 5],
-    "bot_levels": ["mudah", "normal", "sulit", "expert"],
+    "board_sizes": [3, 4],
+    "bot_levels": ["mudah", "normal", "sulit"],
     "sound": true
   },
   
   "features": {
     "sound_effects": true,
     "animations": true,
-    "dark_mode": true,
-    "timer": false,
-    "multiplayer": false,
-    "leaderboard": true,
-    "achievements": false
+    "dark_mode": true
+  },
+  
+  "update": {
+    "title": "🎨 Tema Baru!",
+    "message": "Warna coklat yang hangat telah diaktifkan!",
+    "notify": true
   },
   
   "ads": {
     "enabled": true,
-    "message": "🔥 Update besar akan datang!",
-    "color": "#2196F3",
-    "duration": 10
+    "message": "Update akan tiba sebentar lagi!",
+    "color": "#A1887F",
+    "duration": 8
   },
   
-  "update": {
-    "title": "🎉 Update Besar!",
-    "message": "Sistem konfigurasi dinamis sudah aktif!",
-    "notify": true
-  },
-  
-  "maintenance": false,
-  "maintenance_message": "Game sedang update fitur baru...",
-  
-  "bug_report": {
-    "enabled": true,
-    "email": "support@xogame.com"
-  }
+  "maintenance": false
 }
