--- a/config.json
+++ b/config.json
@@ -1,43 +1,54 @@
 {
-  "game_name": "XO Game Coklat",
-  "version": "4.1",
+  "game_name": "XO Game Ultimate",
+  "version": "5.0",
   
   "theme_settings": {
-    "background": "#5D4037",
-    "primary": "#795548",
-    "secondary": "#8D6E63",
-    "text": "#FFFFFF",
-    "accent": "#D7CCC8",
-    "x_color": "#FFAB91",
-    "o_color": "#B0BEC5",
-    "button_bg": "#A1887F",
-    "button_hover": "#8D6E63"
+    "background": "#1a1a2e",
+    "primary": "#16213e",
+    "secondary": "#0f3460",
+    "text": "#ffffff",
+    "accent": "#4ecca3",
+    "x_color": "#ff9a76",
+    "o_color": "#a7c5eb",
+    "ad_color": "#ff9a00"
   },
   
   "settings": {
-    "board_sizes": [3, 4],
-    "bot_levels": ["mudah", "normal", "sulit"],
+    "board_sizes": [3, 4, 5],
+    "bot_levels": ["mudah", "normal", "sulit", "expert"],
     "sound": true
   },
   
   "features": {
     "sound_effects": true,
     "animations": true,
-    "dark_mode": true
-  },
-  
-  "update": {
-    "title": "🎨 Tema Baru!",
-    "message": "Warna coklat yang hangat telah diaktifkan!",
-    "notify": true
+    "dark_mode": true,
+    "statistics": true,
+    "multiple_themes": false,
+    "tournament_mode": false,
+    "achievements": true,
+    "leaderboard": false
   },
   
   "ads": {
     "enabled": true,
-    "message": "Update akan tiba sebentar lagi!",
-    "color": "#A1887F",
-    "duration": 8
+    "title": "Special Offer!",
+    "message": "Upgrade to Premium for no ads!",
+    "color": "#ff5722",
+    "duration": 10
   },
   
-  "maintenance": false
+  "update": {
+    "title": "🎉 Major Update!",
+    "message": "New themes, features, and bug fixes!",
+    "notify": true
+  },
+  
+  "maintenance": false,
+  "maintenance_message": "Game is updating...",
+  
+  "bug_report": {
+    "enabled": true,
+    "email": "support@xogame.com"
+  }
 }
